# admin-platform

./: .gitignore  CLAUDE.md  README.md  start.sh
admin-agent/: config.yaml  (+2 more)
admin-python/: .env.example  Dockerfile  QUICKSTART_ACTIVATION.md  README.md  activation_demo.py  pyproject.toml  ws_server.py
admin-python/app/: main.py
admin-python/app/ai/: agents.py  flow_manager.py  glm_provider.py  glm_provider_streaming.py  mcp_server.py  model_router.py  pipeline_graph.py  pipeline_skills.py  skills.py  toolsets.py
admin-python/app/api/: agents.py  ai_upgrade.py  chat.py  deps.py  flow.py  kanban.py  knowledge.py  skills.py  tasks.py
admin-python/app/core/: config.py  database.py  deps.py  redis.py
admin-python/app/messaging/: __init__.py  api.py  schemas.py  setup.py
admin-python/app/models/: __init__.py  agent.py  agent_models.py  collaboration.py  models.py  task.py
admin-python/app/schemas/: activation.py  common.py
admin-python/app/services/: __init__.py  activation_service.py  ai_upgrade_service.py  auth.py  bug_service.py  builtin_memory_provider.py  knowledge_service.py  memory_manager.py  memory_provider.py  memory_service.py  project_service.py  task_service.py  tracking_analyzer.py  tracking_consumer.py  tracking_worker.py  workflow_service.py
admin-python/docs/: activation_api.md  activation_implementation.md
admin-python/skills/ai-upgrade-check/: SKILL.md
admin-python/tests/: __init__.py  conftest.py  performance_test.py  test_activation.py  test_agent_api.py  test_agent_status.py  test_kanban_api.py  test_messaging.py  test_websocket.py
(+251 files in other folders)
